@@ -1,29 +1,28 @@
 package hanium.apigateway_service.dto.product.response;
 
 import hanium.common.proto.product.ProductSearchResponse;
+import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Builder
-@NoArgsConstructor
-@AllArgsConstructor
+@AllArgsConstructor(access = AccessLevel.PRIVATE)
 public class ProductSearchResponseDTO {
-    private List<ProductResponseDTO> productList;
+
+    private List<SimpleProductDTO> productList;
 
     public static ProductSearchResponseDTO from(ProductSearchResponse grpcResponse) {
-        List<ProductResponseDTO> dtoList = grpcResponse.getProductListList().stream()
-                .map(ProductResponseDTO::from)
-                .collect(Collectors.toList());
-
+        List<SimpleProductDTO> productList = grpcResponse
+                .getProductListList()
+                .stream()
+                .map(SimpleProductDTO::from)
+                .toList();
         return ProductSearchResponseDTO.builder()
-                .productList(dtoList)
+                .productList(productList)
                 .build();
     }
-
 }
